--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
         <div class="form-group">
             <label for="comments">Any Additional Comments?</label><br>
-            <textarea name="comments" id="" cols="30" rows="10">Enter your comments here:</textarea><br>
+            <textarea name="comments" id="" cols="30" rows="10" placeholder="Enter your comments here..."></textarea><br>
         </div>
 
         <button id="submit" type="submit">Submit</button>
